--- a/Internprosjekt_frontend_docker_compose/src/index.scss
+++ b/Internprosjekt_frontend_docker_compose/src/index.scss
@@ -21,6 +21,7 @@ input[type="submit"] {
     padding: 6px;
     cursor: pointer;
     margin-top: 10px;
+    min-width: 50px;
     &:hover {
         background-color: #e0e0e0;
     }
@@ -36,4 +37,5 @@ textarea {
     padding: 6px;
     border: 1px solid #777;
     border-radius: 4px;
+    min-width: 250px;
 }
